--- a/readme
+++ b/readme
@@ -1,2 +1,20 @@
 TUTORIAL 3
 Implementation of interval tree using insertion, deletion, print , search
+ 
+ Firstly provide these input continously and program will give testing output
+Input 
+6
+15 20
+10 30
+17 19
+5 20
+12 15
+30 40
+15 20
+14 16
+21 23
+
+
+Secondly
+After that we can apply more operations for insertion, deletion ,search
+as shown by compiler
