--- a/readme
+++ b/readme
@@ -1,5 +1,7 @@
 TUTORIAL 3
-Implementation of interval tree using insertion, deletion, print , search
+Implementation of interval tree using insertion, deletion, print , search.
+
+
  
  Firstly provide these input continously and program will give testing output
 Input 
